--- a/heyGongC_Camera/Info.plist
+++ b/heyGongC_Camera/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>이 앱은 사용자가 사용하는 네트워크에 있는 기기를 찾고 기기와 연결할 수 있게 됩니다.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>CCTV 및 소리감지지 활성화를 위해 마이크 권한이 필요합니다.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>CCTV 및 소리감지지 활성화를 위해 카메라 권한이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -16,7 +22,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
+					<string>PermissionSetting</string>
 				</dict>
 			</array>
 		</dict>
