--- a/heyGongC_Camera/Info.plist
+++ b/heyGongC_Camera/Info.plist
@@ -22,7 +22,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>QRCodeGenerator</string>
+					<string>PermissionSetting</string>
 				</dict>
 			</array>
 		</dict>
